kubernetes-manifests/Application/primary-pods.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: primary
  namespace: application
spec:
  replicas: 3
  selector:
    matchLabels:
      app: primary
  template:
    metadata:
      labels:
        app: primary
    spec:
      containers:
      - name: primary
        image: argoproj/rollouts-demo:green
        ports:
        - containerPort: 80
