kubernetes-manifests/Application/service-primary.yaml
apiVersion: v1
kind: Service
metadata:
  name: primary-service
  namespace: application
spec:
  selector:
    app: primary
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
